tests/typechecking/invalid/if_cond.ml
let x = not true in
if x + 1 then print_int 1 else print_int 2
